l1ttl3_pwNY_v0.1/redsocks/examples/rules_int_proxy.v4
# Generated by iptables-save v1.6.0 on Sun Mar 11 20:33:33 2018
*nat
:PREROUTING ACCEPT [1018:124657]
:INPUT ACCEPT [2015:161256]
:OUTPUT ACCEPT [1639:193531]
:POSTROUTING ACCEPT [1789:225563]
:REDSOCKS - [0:0]
-A PREROUTING ! -s 10.0.10.161/32 -i wlan0 -p tcp -j REDSOCKS
-A OUTPUT -p tcp -m owner ! --uid-owner 110 -j REDSOCKS
-A REDSOCKS -d 10.0.0.0/8 -j RETURN
-A REDSOCKS -d 127.0.0.1/32 -j RETURN
-A REDSOCKS -p tcp -m tcp --dport 80 -j REDIRECT --to-ports 8091
-A REDSOCKS -p tcp -m tcp --dport 443 -j REDIRECT --to-ports 8090
-A REDSOCKS -p tcp -m tcp --dport 5222 -j REDIRECT --to-ports 8092
-A REDSOCKS -p tcp -m tcp --dport 5228 -j REDIRECT --to-ports 8093
-A REDSOCKS -p tcp -m tcp --dport 5094 -j REDIRECT --to-ports 8094
COMMIT
# Completed on Sun Mar 11 20:33:33 2018
# Generated by iptables-save v1.6.0 on Sun Mar 11 20:33:33 2018
*filter
:INPUT ACCEPT [1905:147313]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [44602:19251572]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -d 127.0.0.1/32 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 43000 -j ACCEPT
-A INPUT -i wlan0 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i wlan0 -p udp -m udp --dport 67 -j ACCEPT
COMMIT
# Completed on Sun Mar 11 20:33:33 2018
