l1ttl3_pwNY_v0.1/redsocks/examples/rules_int_proxy_ssl.v4
# Generated by iptables-save v1.6.0 on Sun Mar 18 21:22:46 2018
*nat
:PREROUTING ACCEPT [722:60835]
:INPUT ACCEPT [1080:83343]
:OUTPUT ACCEPT [881:57772]
:POSTROUTING ACCEPT [913:59750]
:REDSOCKS - [0:0]
-A PREROUTING ! -s 10.0.10.161/32 -i wlan0 -p tcp -j REDSOCKS
-A REDSOCKS -d 10.0.0.0/8 -j RETURN
-A REDSOCKS -d 169.254.0.0/16 -j RETURN
-A REDSOCKS -p tcp -m tcp --dport 80 -j REDIRECT --to-ports 8091
-A REDSOCKS -p tcp -m tcp --dport 443 -j REDIRECT --to-ports 8090
-A REDSOCKS -p tcp -m tcp --dport 5228 -j REDIRECT --to-ports 8093
-A REDSOCKS -p tcp -m tcp --dport 5094 -j REDIRECT --to-ports 8094
COMMIT
# Completed on Sun Mar 18 21:22:46 2018
# Generated by iptables-save v1.6.0 on Sun Mar 18 21:22:46 2018
*filter
:INPUT ACCEPT [1282:126532]
:FORWARD ACCEPT [2809:268561]
:OUTPUT ACCEPT [139918:45140583]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -d 127.0.0.1/32 -j ACCEPT
-A INPUT -i wlan0 -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -i wlan0 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 8090 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 8091 -j ACCEPT
COMMIT
# Completed on Sun Mar 18 21:22:46 2018
